--- a/index.html
+++ b/index.html
@@ -320,16 +320,16 @@
       </g>
       oo
 
-      <!-- From Columbus... -->
+      <!-- link? -->
       <g transform="translate(10, 120)" class="msg-3">
         <rect width="430" height="66.1302" rx="18.0355" />
         <text x="15" y="27">
-          I’m a product designer. I used to work at GitHub,
+          .....
         </text>
         <text x="15" y="50">
-          but I’ve been at
-          <a xlink:href="https://planetscale.com">PlanetScale</a>
-          for about 5 months now.
+          .....
+          <a xlink:href="https://asdfasdf">.....</a>
+          .....
         </text>
       </g>
 
@@ -367,13 +367,13 @@
         </circle>
       </g>
 
-      <!-- Twitter -->
+      <!-- link? -->
       <g transform="translate(10, 192)" class="msg-4">
         <rect width="473" height="42" rx="18.0355" />
         <text x="15" y="27">
           You can find me on Twitter at
-          <a xlink:href="https://twitter.com/jasonlong">
-            https://twitter.com/jasonlong
+          <a xlink:href="https://asdfasdf">
+            https://asdfasdf
           </a>
         </text>
       </g>
@@ -412,10 +412,10 @@
         </circle>
       </g>
 
-      <!-- Thanks -->
+      <!-- txt -->
       <g transform="translate(10, 240)" class="msg-5">
         <rect width="210" height="42" rx="18" />
-        <text x="15" y="27">Thanks for stopping by</text>
+        <text x="15" y="27">.....</text>
       </g>
 
       <!-- typing 6 -->
@@ -452,10 +452,10 @@
         </circle>
       </g>
 
-      <!-- Have a great... -->
+      <!-- nice -->
       <g transform="translate(10, 288)" class="msg-6">
         <rect width="210" height="42" rx="18.0355" />
-        <text x="15" y="27">Have a great Friday! 👋🏻</text>
+        <text x="15" y="27">.....👋🏻</text>
       </g>
     </svg>
 
